apps/ingress-nginx-L4-to-L7/v2-0.32.0/ingress-nginx-ctrl.yaml
# Source : https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-0.32.0/deploy/static/provider/cloud/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
---
# Source: ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/component: controller
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/component: controller
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /wait-shutdown
          args:
            - /nginx-ingress-controller
            - --publish-service=ingress-nginx/ingress-nginx-controller
            - --election-id=ingress-controller-leader
            - --ingress-class=nginx-iga
            - --configmap=ingress-nginx/ingress-nginx-controller
          #            - --validating-webhook=:8443
          #            - --validating-webhook-certificate=/usr/local/certificates/cert
          #            - --validating-webhook-key=/usr/local/certificates/key
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          #            - name: webhook
          #              containerPort: 8443
          #              protocol: TCP
          #          volumeMounts:
          #            - name: webhook-cert
          #              mountPath: /usr/local/certificates/
          #              readOnly: true
          resources:
            requests:
              memory: "90Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 300
#      volumes:
#        - name: webhook-cert
#          secret:
#            secretName: ingress-nginx-admission
---
# DECC K8s version does not support this.
## Source: ingress-nginx/templates/controller-service-webhook.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.3
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.32.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: controller
#  name: ingress-nginx-controller-admission
#spec:
#  type: ClusterIP
#  ports:
#    - name: https-webhook
#      port: 443
#      targetPort: webhook
#  selector:
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/component: controller
#---
## Source: ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
#apiVersion: admissionregistration.k8s.io/v1beta1
#kind: ValidatingWebhookConfiguration
#metadata:
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.3
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.32.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: admission-webhook
#  name: ingress-nginx-admission
#webhooks:
#  - name: validate.nginx.ingress.kubernetes.io
#    rules:
#      - apiGroups:
#          - extensions
#          - networking.k8s.io
#        apiVersions:
#          - v1beta1
#        operations:
#          - CREATE
#          - UPDATE
#        resources:
#          - ingresses
#    failurePolicy: Fail
#    clientConfig:
#      service:
#        namespace: scdc1-staging-iga
#        name: ingress-nginx-controller-admission
#        path: /extensions/v1beta1/ingresses
#---
## Source: ingress-nginx/templates/admission-webhooks/job-patch/job-createSecret.yaml
#apiVersion: batch/v1
#kind: Job
#metadata:
#  name: ingress-nginx-admission-create
#  annotations:
#    helm.sh/hook: pre-install,pre-upgrade
#    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.3
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.32.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: admission-webhook
#spec:
#  template:
#    metadata:
#      name: ingress-nginx-admission-create
#      labels:
#        helm.sh/chart: ingress-nginx-2.0.3
#        app.kubernetes.io/name: ingress-nginx
#        app.kubernetes.io/instance: ingress-nginx
#        app.kubernetes.io/version: 0.32.0
#        app.kubernetes.io/managed-by: Helm
#        app.kubernetes.io/component: admission-webhook
#    spec:
#      containers:
#        - name: create
#          image: jettech/kube-webhook-certgen:v1.2.0
#          imagePullPolicy: IfNotPresent
#          args:
#            - create
#            - --host=ingress-nginx-controller-admission,ingress-nginx-controller-admission.ingress-nginx.svc
#            - --secret-name=ingress-nginx-admission
#      restartPolicy: OnFailure
#      serviceAccountName: ingress-nginx-admission
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 2000
#---
## Source: ingress-nginx/templates/admission-webhooks/job-patch/job-patchWebhook.yaml
#apiVersion: batch/v1
#kind: Job
#metadata:
#  name: ingress-nginx-admission-patch
#  annotations:
#    helm.sh/hook: post-install,post-upgrade
#    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.3
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.32.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: admission-webhook
#spec:
#  template:
#    metadata:
#      name: ingress-nginx-admission-patch
#      labels:
#        helm.sh/chart: ingress-nginx-2.0.3
#        app.kubernetes.io/name: ingress-nginx
#        app.kubernetes.io/instance: ingress-nginx
#        app.kubernetes.io/version: 0.32.0
#        app.kubernetes.io/managed-by: Helm
#        app.kubernetes.io/component: admission-webhook
#    spec:
#      containers:
#        - name: patch
#          image: jettech/kube-webhook-certgen:v1.2.0
#          imagePullPolicy:
#          args:
#            - patch
#            - --webhook-name=ingress-nginx-admission
#            - --patch-mutating=false
#            - --secret-name=ingress-nginx-admission
#            - --patch-failure-policy=Fail
#      restartPolicy: OnFailure
#      serviceAccountName: ingress-nginx-admission
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 2000
#---
## Source: ingress-nginx/templates/admission-webhooks/job-patch/role.yaml
#apiVersion: rbac.authorization.k8s.io/v1
#kind: Role
#metadata:
#  name: ingress-nginx-admission
#  annotations:
#    helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
#    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.3
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.32.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: admission-webhook
#rules:
#  - apiGroups:
#      - ''
#    resources:
#      - secrets
#    verbs:
#      - get
#      - create
#---
## Source: ingress-nginx/templates/admission-webhooks/job-patch/rolebinding.yaml
#apiVersion: rbac.authorization.k8s.io/v1
#kind: RoleBinding
#metadata:
#  name: ingress-nginx-admission
#  annotations:
#    helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
#    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.3
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.32.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: admission-webhook
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: Role
#  name: ingress-nginx-admission
#subjects:
#  - kind: ServiceAccount
#    name: ingress-nginx-admission
#---
## Source: ingress-nginx/templates/admission-webhooks/job-patch/serviceaccount.yaml
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: ingress-nginx-admission
#  annotations:
#    helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
#    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.3
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.32.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: admission-webhook
